Upgrade Webpack version to v5, also dependencies.

--- a/demo.html
+++ b/demo.html
@@ -1,3 +1,5 @@
+<!-- ./demo.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -42,7 +44,7 @@
 </div>
 <script>
 if (!window.jigsaw) {
-  document.write('<script src="./dist/jigsaw.min.js"><\/script>')
+  document.write('<script src="jigsaw.min.js"><\/script>')
 }
 </script>
 <script>
